fix css slide detail listing on mobile and fix css menu admin on mobile

--- a/static/admin/css/nav_sidebar.css
+++ b/static/admin/css/nav_sidebar.css
@@ -107,7 +107,7 @@
 
 @media (max-width: 767px) {
     #nav-sidebar, #toggle-nav-sidebar {
-        display: flex;
+        display: inline;
     }
 
     .main > #nav-sidebar + .content,
